# monorepo

./: .firebaserc  .gitignore  BUILD.bazel  README.md  Tiltfile  WORKSPACE  firebase.json  formatDeploymentYaml.sh  protoc_gen.sh
firebase-emulator/: Dockerfile
hack/: firebase_export.sh
k8s/: firebase-emulator.yaml  mysql-deployment.yaml
k8s/config-map/: dev.yaml.example  env.yaml
k8s/service/: gateway-service-deployment.yaml  note-service-deployment.yaml
note-app/: .env  .eslintrc.json  globals.d.ts  package.json  tsconfig.json
note-app/public/: index.html  roboto-font.css
note-app/src/: App.tsx
note-app/src/components/: index.ts
note-app/src/components/ChecklistInput/: index.tsx  style.ts
note-app/src/components/Container/: index.tsx
note-app/src/components/DatePicker/: index.tsx
note-app/src/components/Footer/: index.tsx  style.ts
note-app/src/components/Form/: index.tsx  style.ts
note-app/src/components/HeaderBar/: index.tsx  style.ts
note-app/src/components/Logo/: index.tsx  style.ts
note-app/src/components/NoteList/: index.tsx  style.ts
note-app/src/context/: index.ts
note-app/src/context/NoteContext/: NoteContext.tsx  Provider.tsx  index.ts  types.ts
note-app/src/hooks/: UseNoteContext.tsx  UseThemeContext.tsx  index.ts
note-app/src/pages/: index.ts
note-app/src/pages/Home/: index.tsx  style.ts
note-app/src/pages/Note/: index.tsx  style.ts
note-app/src/query/: index.ts  init.ts  queries.ts
note-app/src/res/SocialIcons/: facebook.svg.js  index.js  instagram.svg.js  linkedin.svg.js  reddit.svg.js  twitter.svg.js  youtube.svg.js
note-app/src/theme/: Provider.tsx  index.ts
note-app/src/theme/default/: colors.ts  config.ts  default.tsx
services/: go.mod  go.sum
services/gateway-service/: BUILD.bazel  Dockerfile  gqlgen.yml  main.go
services/gateway-service/graph/: BUILD.bazel  schema.graphqls  schema.resolvers.go
services/gateway-service/graph/model/: BUILD.bazel  models_gen.go
services/gateway-service/middleware/: BUILD.bazel  cors.go
services/gateway-service/service/: BUILD.bazel  note_service.go
services/gateway-service/transform/: BUILD.bazel  note_transformer.go
services/note-service/: BUILD.bazel  Dockerfile  main.go
services/note-service/connection/: BUILD.bazel  firebase_connection.go  mongo_conn.go  sqldb_connection.go  sqlite_connection.go
services/note-service/pb/: BUILD.bazel  service.pb.go  service_grpc.pb.go
services/note-service/repo/: BUILD.bazel  firebase_repo.go  mongo_repo.go  repo.go  sql_repo.go
services/note-service/rpc/: BUILD.bazel  handler.go
services/note-service/service/: BUILD.bazel  note_service.go
services/note-service/transform/: BUILD.bazel  note_transformer.go
services/pkg/model/: BUILD.bazel  db.go  note.go  todo.go
services/pkg/proto/: note_service.proto
