load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")

# gazelle:prefix github.com/kil-san/micro-serv/gateway-service

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/kil-san/micro-serv/gateway-service",
    visibility = ["//visibility:private"],
    deps = [
        "//services/gateway-service/graph:go_default_library",
        "//services/gateway-service/graph/generated:go_default_library",
        "//services/gateway-service/middleware:go_default_library",
        "@com_github_99designs_gqlgen//graphql/handler:go_default_library",
        "@com_github_99designs_gqlgen//graphql/playground:go_default_library",
        "@com_github_go_chi_chi_v5//:go_default_library",
        "@com_github_go_chi_chi_v5//middleware:go_default_library",
        "@dev_unknwon_clog_v2//:go_default_library",
    ],
)

go_binary(
    name = "gateway-service",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
