load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "resolver.go",
        "schema.resolvers.go",
    ],
    importpath = "github.com/kil-san/micro-serv/gateway-service/graph",
    visibility = ["//visibility:public"],
    deps = [
        "//services/gateway-service/graph/generated:go_default_library",
        "//services/gateway-service/graph/model:go_default_library",
        "//services/gateway-service/service:go_default_library",
        "//services/note-service/pb:go_default_library",
        "@dev_unknwon_clog_v2//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
