load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "firebase_connection.go",
        "sqldb_connection.go",
    ],
    importpath = "github.com/kil-san/micro-serv/note-service/connection",
    visibility = ["//visibility:public"],
    deps = [
        "//services/pkg/model:go_default_library",
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_google_cloud_go_firestore//:go_default_library",
        "@com_google_firebase_go//:go_default_library",
        "@dev_unknwon_clog_v2//:go_default_library",
    ],
)
