load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "mongo_repo.go",
        "repo.go",
        "sql_repo.go",
    ],
    importpath = "github.com/kil-san/micro-serv/note-service/repo",
    visibility = ["//visibility:public"],
    deps = [
        "//services/pkg/model:go_default_library",
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@dev_unknwon_clog_v2//:go_default_library",
        "@org_mongodb_go_mongo_driver//bson:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
    ],
)
