load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "firebase_repo.go",
        "mongo_repo.go",
        "repo.go",
    ],
    importpath = "github.com/kil-san/micro-serv/note-service/repo",
    visibility = ["//visibility:public"],
    deps = [
        "//services/pkg/model:go_default_library",
        "@com_google_cloud_go_firestore//:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_mongodb_go_mongo_driver//bson:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
    ],
)
