load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["handler.go"],
    importpath = "github.com/kil-san/micro-serv/note-service/rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//services/note-service/connection:go_default_library",
        "//services/note-service/pb:go_default_library",
        "//services/note-service/repo:go_default_library",
        "//services/note-service/service:go_default_library",
        "//services/pkg/model:go_default_library",
        "@dev_unknwon_clog_v2//:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
    ],
)
