load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["note_transformer.go"],
    importpath = "github.com/kil-san/micro-serv/note-service/transform",
    visibility = ["//visibility:public"],
    deps = [
        "//services/note-service/pb:go_default_library",
        "//services/pkg/model:go_default_library",
    ],
)
